--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
         </div>
         <div id="socials-container">
           <img
-            src="./assets/linkedin.png"
+            src="./Assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
             onclick="location.href='https://www.linkedin.com/in/bhavessh/'"
           />
           <img
-            src="./assets/github.png"
+            src="./Assets/github.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href='https://github.com/bhavessh'"
@@ -85,7 +85,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/New folder/1673345705865-transformed-removebg-preview.png"
+            src="./Assets/New folder/1673345705865-transformed-removebg-preview.png"
             alt="Profile picture"
             class="about-pic"
           />
@@ -94,7 +94,7 @@
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="./assets/experience.png"
+                src="./Assets/experience.png"
                 alt="Experience icon"
                 class="icon"
               />
@@ -103,7 +103,7 @@
             </div>
             <div class="details-container">
               <img
-                src="./assets/education.png"
+                src="./Assets/education.png"
                 alt="Education icon"
                 class="icon"
               />
@@ -125,7 +125,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="./Assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
@@ -141,7 +141,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./Assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -152,7 +152,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./Assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -163,7 +163,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./Assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -174,7 +174,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./Assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -185,7 +185,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./Assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -196,7 +196,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./Assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -212,7 +212,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./Assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -223,7 +223,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./Assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -234,7 +234,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./Assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -245,7 +245,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./Assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -259,7 +259,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="./Assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#projects'"
@@ -273,7 +273,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./Assets/project-1.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -297,7 +297,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./Assets/project-2.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -321,7 +321,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./Assets/project-3.png"
                 alt="Project 3"
                 class="project-img"
               />
@@ -345,7 +345,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="./Assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
@@ -357,7 +357,7 @@
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
-            src="./assets/email.png"
+            src="./Assets/email.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
@@ -365,7 +365,7 @@
         </div>
         <div class="contact-info-container">
           <img
-            src="./assets/linkedin.png"
+            src="./Assets/linkedin.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
